2008-01-10  Paul J Stevens <paul@nfg.nl>

	* dbmail-mailbox.c:
	make body searches case-sensitive to accomodate postgresql

2008-01-07  Paul J Stevens <paul@nfg.nl>

	* dbmail-mailbox.c:
	fix another segfault during export (bug #668)

2008-01-03  Paul J Stevens <paul@nfg.nl>

	* dbmail-mailbox.c:
	use join compatible with mysql 4.1 during export
	* dbmail-mailbox.c:
	fix segfault (bug #668)
	* man/dbmail-users.8:
	update generated manpage

2007-12-17  Paul J Stevens <paul@nfg.nl>

	* check_dbmail_imapd.c, dbmail-message.c:
	do not add From_ header as part of the message during insertion
	* check_dbmail_message.c, dbmail-mailbox.c:
	add a missing case of dm_strtoull in dbmail_mailbox_get_set

2007-12-16  Paul J Stevens <paul@nfg.nl>

	* modules/authldap.c:
	ldap reconnect fix (bug #663)
	* modules/authldap.c:
	ldap anonbind fix (bug #662)
	* check_dbmail_common.c, config.c, debug.c, debug.h:
	silence log messages from glib (bug #656)

2007-12-13  Paul J Stevens <paul@nfg.nl>

	* debian/changelog:
	update debian/changelog

2007-12-12  Paul J Stevens <paul@nfg.nl>

	* VERSION:
	v2.2.8

2007-12-06  Paul J Stevens <paul@nfg.nl>

	* debian/changelog:
	update debian changelog

2007-12-05  Paul J Stevens <paul@nfg.nl>

	* VERSION:
	v2.2.8rc1
	* check_dbmail.h, check_dbmail_message.c, dbmail-message.c:
	avoid gmime mbox parser to prevent unwanted message truncation

2007-11-29  Paul J Stevens <paul@nfg.nl>

	* modules/dbmysql.c:
	remove silent autoreconnects in the mysql driver to prevent resetting 
	the client encoding (bug #655)
	* dbmail-mailbox.c:
	add correct From_ headers while exporting email (closes #656)

2007-11-25  Paul J Stevens <paul@nfg.nl>

	* check_dbmail_misc.c, dbmail-mailbox.c, misc.c, misc.h:
	add dm_strtoull call that will return 0 and set errno when the string 
	conversion would result in a negative integer

2007-11-22  Paul J Stevens <paul@nfg.nl>

	* check_dbmail_mailbox.c, dbmail-mailbox.c, imapcommands.c, 
	test-scripts/testimap.py: